# gia-api

./: .coveragerc  .dockerignore  .drone.yml  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  Jenkinsfile  LICENSE  Makefile  Procfile  README.md  dev.yml  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.staging.yml  docker-compose.yml  env.example  env.local-example  env.staging-example  manage.py  pyproject.toml  pytest.ini  renovate.json  requirements.txt
.ansible/: ansible.cfg  hosts  playbook.yml  requirements.yml
.ansible/roles/deploy/defaults/: main.yml
.ansible/roles/deploy/handlers/: main.yml
.ansible/roles/deploy/tasks/: main.yml
.docker/django/: Dockerfile  Dockerfile-drone  Dockerfile-local  Dockerfile-staging  ci.Dockerfile  entrypoint  gunicorn.sh  k8s.Dockerfile
.docker/django/rootfs/etc/cont-init.d/: 00-wait-for-db  10-collectstatic  20-migrate
.docker/django/rootfs/etc/fix-attrs.d/: 10-cron
.docker/django/scripts/: entrypoint  entrypoint-local  start
.docker/postgres/: Dockerfile
.docker/redis/: Dockerfile  redis.conf
api/v1/: filters.py  serializers.py  urls.py  views.py
apps/api/v1/: apps.py  filters.py  permissions.py  serializers.py  urls.py  views.py
apps/api/v1/auth/: adapter.py
apps/rcoi/: admin.py  apps.py  filters.py  middleware.py  models.py  sitemap.py  tables.py  tests.py  urls.py  views.py  xlsx_to_csv.py
apps/rcoi/jobs/hourly/: send_subscriptions.py  update_db.py
apps/rcoi/migrations/: 0001_initial.py  0002_auto_20170527_2043.py  0003_auto_20170529_1550.py  0004_auto_20170604_2353.py  0005_auto_20170605_1044.py  0006_auto_20170605_2052.py  0007_auto_20170613_1047.py  0008_auto_20170622_2242.py  0009_auto_20180523_1350.py
apps/rcoi/templatetags/: rename.py
apps/static/css/: bootstrap.min.css  style.css  style.min.css
apps/templates/: 403.html  404.html  base.html  metrika.html  robots.txt  table.html
apps/templates/admin/: index.html
apps/templates/api/v1/auth/: email_confirmation_signup_message.html  email_confirmation_signup_subject.txt
apps/templates/mail/: new_exams_message.html  new_exams_message.txt  new_exams_subject.txt
apps/templates/rcoi/: button_mobile.html  date_detail.html  date_list.html  disclaimer.html  employee.html  employee_detail.html  exam.html  exam_detail.html  exam_list.html  home.html  level_detail.html  level_list.html  nav.html  organisation_detail.html  organisation_list.html  place.html  place_detail.html  position_detail.html  position_list.html  territory_detail.html  territory_list.html
apps/templates/rcoi/cols/: employee_name.html  employee_org.html  exam_addr.html  exam_employee.html  exam_org.html  exam_place.html  place_addr.html  place_name.html
compose/django/: Dockerfile  Dockerfile-dev  Dockerfile-drone  Dockerfile-local  Dockerfile-staging  gunicorn.sh
compose/nginx/: Dockerfile  Dockerfile-staging  nginx.conf  staging.conf
compose/postgres/: Dockerfile  backup.sh  restore.sh
compose/postgres/scripts/: list-backups  restore
compose/redis/: Dockerfile  redis.conf
config/: urls.py  wsgi.py
config/settings/: common.py  local.py  production.py  staging.py
gia/: settings.py  urls.py  wsgi.py
gia-api/: manage.py
gia-api/apps/api/v1/: apps.py  filters.py  permissions.py  serializers.py  urls.py  views.py
gia-api/apps/api/v1/account/: adapter.py
gia-api/apps/api/v1/auth/: adapter.py
gia-api/apps/api/v1/dj_rest_auth/: serializers.py
gia-api/apps/api/v1/jwt_auth/: utils.py
gia-api/apps/api/v1/simplejwt/: serializers.py
gia-api/apps/rcoi/: admin.py  apps.py  filters.py  middleware.py  models.py  sitemap.py  tables.py  tests.py  urls.py  views.py  xlsx_to_csv.py
gia-api/apps/rcoi/fixtures/: datasource.json
gia-api/apps/rcoi/migrations/: 0001_squashed_0010_auto_20200611_2046.py  0002_auto_20170527_2043.py  0002_tsvector_20200619_0929.py  0003_auto_20200701_1536.py  0004_alter_datafile_options_alter_datasource_options_and_more.py  0004_auto_20170604_2353.py  0005_auto_20170605_1044.py  0006_auto_20170605_2052.py  0007_auto_20170613_1047.py  0010_auto_20200611_2046.py
gia-api/apps/rcoi/templatetags/: navactive.py  rupluralize.py
gia-api/apps/rcoi/tests/: conftest.py  test_admin.py  test_core.py  test_filters.py  test_jobs.py  test_middleware.py  test_models.py  test_templatetags.py  test_views.py  test_xlsx_to_csv.py
gia-api/apps/static/css/: bootstrap.min.css  style.css  style.min.css
gia-api/apps/static/js/: main.js  main.min.js
gia-api/apps/templates/: base.html  metrika.html  robots.txt  table.html
gia-api/apps/templates/admin/: exam_change_list.html  exam_import_form.html  index.html
gia-api/apps/templates/mail/: new_exams_message.html  new_exams_message.txt
gia-api/apps/templates/rcoi/: button_mobile.html  disclaimer.html  employee.html  employee_detail.html  exam.html  home.html  level_list.html  nav.html  organisation.html  organisation_detail.html  place.html  place_detail.html  position_detail.html  position_list.html  territory_list.html
gia-api/config/: gunicorn.py  urls.py  wsgi.py
gia-api/config/settings/: common.py  local.py  production.py  staging.py  test.py
gia-api/requirements/: common.txt  local.txt  production.txt  staging.txt  testing.txt
rcoi/: admin.py  api.py  apps.py  filters.py  models.py  serializers.py  tables.py  urls.py  views.py  xls_to_db.py
rcoi/migrations/: 0001_initial.py
requirements/: common.txt  dev.txt  local.txt  production.txt  staging.txt
static/css/: style.css
static/js/: filter.js
templates/: base.html  table.html
templates/rcoi/: date_detail.html  date_list.html  employee.html  employee_detail.html  exam.html  exam_detail.html  examdate_detail.html  examdate_list.html  examlevel_detail.html  examlevel_list.html  index.html  level_detail.html  list.html  nav.html  organisation_detail.html  organisation_list.html  place.html  place_detail.html  position_detail.html  position_list.html  territory_detail.html  territory_list.html
templates/rcoi/cols/: employee_org.html  exam_addr.html  exam_place.html  place_name.html
(+40 files in other folders)
